# pixcore

./: .gitignore  CLAUDE.md  README.md  development_doc.md  development_tasks.md  requirements_prototype.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: be61fa4a45fa_initial_migration.py  c9d1f9fc0d71_add_consistency_locks_table.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  assets.py  consistency.py  generation.py  projects.py  scenes.py  settings.py  shots.py  versions.py
backend/app/models/: __init__.py  asset.py  consistency_lock.py  project.py  scene.py  settings.py  shot.py  version.py
backend/app/schemas/: __init__.py  asset.py  consistency_lock.py  generation.py  project.py  scene.py  shot.py  version.py
backend/app/services/: __init__.py  generation_service.py
backend/tests/: conftest.py
frontend/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: i18n.ts  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src/app/: App.tsx  Providers.tsx  router.tsx
frontend/src/components/: LanguageSwitcher.tsx
frontend/src/hooks/: useDebounce.ts  useFormWithValidation.ts  useTauri.ts  useWebSocket.ts
frontend/src/lib/: api-client.ts  api.ts  mock-api.ts  mock-data.ts  tauri.ts  validation.ts  websocket.ts
frontend/src/styles/: globals.css
(+47 files in other folders)
